Avoid scrollbars on windows when showing progress

--- a/src/inspect_ai/_view/www/App.css
+++ b/src/inspect_ai/_view/www/App.css
@@ -634,7 +634,7 @@ table.table.table-sm td {
     margin-left: 0;
   }
   to {
-    margin-left: 100%;
+    margin-left: 95%;
   }
 }
 
